k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openseedr
  labels:
    app.kubernetes.io/part-of: openseedr
